--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -66,18 +66,19 @@
                 </div>
             </div><!--/.row-->    
 			<form>
-  <div class="form-group">
+			
+  <div class="form-group wow fadeInUp" data-wow-duration="300ms" data-wow-delay="200ms">
     <label for="exampleInputEmail1">Nome</label>
-    <input type="text" class="form-control" id="exampleInputEmail1">
+    <input type="text" class="form-control" id="exampleInputEmail1" style="max-width: 400px;min-width=200px">
 	 <label for="exampleInputEmail1">Apelido</label>
-    <input type="text" class="form-control" id="exampleInputEmail1">
+    <input type="text" class="form-control" id="exampleInputEmail1" style="max-width: 400px;min-width=200px">
 	 <label for="exampleInputEmail1">Email</label>
-    <input type="email" class="form-control" id="exampleInputEmail1">
+    <input type="email" class="form-control" id="exampleInputEmail1"style="max-width: 400px;min-width=200px">
 	 <label for="exampleInputEmail1">Assunto</label>
-    <input type="text" class="form-control" id="exampleInputEmail1">
+    <input type="text" class="form-control" id="exampleInputEmail1" style="max-width: 400px;min-width=200px">
 	 <label for="exampleInputEmail1">Organização/Empresa/Faculdade</label>
-    <input type="text" class="form-control" id="exampleInputEmail1">
-	 <label for="exampleInputEmail1">Mensagem</label><br>
+    <input type="text" class="form-control" id="exampleInputEmail1" style="max-width: 400px;min-width=200px">
+	 <label for="exampleInputEmail1" style="max-width: 400px;min-width=200px">Mensagem</label><br>
     <textarea type="text"
        cols="40" 
        rows="5" 
@@ -86,7 +87,7 @@
        id="Text1" 
        value="" ></textarea>
   </div>
-  <button type="submit" class="btn btn-default">Enviar</button>
+  <button type="submit" class="btn btn-primary">Enviar</button>
 </form>
         </div><!--/.container-->
     </section><!--/#services-->
