segunda-feira manhã

--- a/index.html
+++ b/index.html
@@ -372,37 +372,42 @@
 
 		        </div>
 		    </section>
-	<footer id="header">
-        <nav id="main-menu" class="navbar navbar-default navbar-fixed" role="banner">
-            <div class="container">
-                <div class="collapse navbar-collapse navbar-right">
-                    <ul class="nav navbar-nav">
-                        <li style = "padding-top: 0px"><a href="#competitions" id = "green_border_bottom"></a></li>
-                        <li class=""><a href="#partners" id  = "red_border_bottom"></a></li>
-						<li class=""><a href="#join" id = "orange_border_bottom"></a></li>
-                    </ul>
-					<ul id = "footer_menu">
-						<li id = "footer_menu_li"><a href = "about_us.html" class = "nolink">Organização</a></li>
-						<li id = "footer_menu_li"><a href = "competitions.html" class = "nolink">Competições</a></li>
-						<li id = "footer_menu_li"><a href = "join_us.html" class = "nolink">Junta-te a nós</a></li>
-						<li id = "footer_menu_li"><a href = "parcerias.html" class = "nolink">Parcerias</a></li>
-						<li id = "footer_menu_li"><a href = "faq.html" class = "nolink">FAQ´s</a></li>
-					</ul>
-                </div>
-				<div class="collapse navbar-collapse navbar-left">
-					<div id = "row">
-						<div class="col-sm-2">
-							<img src = "images/feup.png" class = "img_bottom">
-						</div>
-						<div class="col-sm-2 col-sm-offset-8">
-							<img src = "images/colgaia.png" class = "img_bottom">
-						</div>
-					</div>
-					
-                </div>
-            </div><!--/.container-->
-        </nav><!--/nav-->
-    </footer><!--/footer-->
+			<footer id="header">
+		        <nav id="main-menu" class="navbar navbar-default navbar-fixed-bottom" role="banner">
+		            <div class="container">
+		                <div class="collapse navbar-collapse navbar-right">
+		                    <ul class="nav navbar-nav">
+		                        <li style = "padding-top: 0px"><a href="#competitions" id = "green_border_bottom"></a></li>
+		                        <li class=""><a href="#partners" id  = "red_border_bottom"></a></li>
+								<li class=""><a href="#join" id = "orange_border_bottom"></a></li>
+		                    </ul>
+							<ul id = "footer_menu">
+								<li id = "footer_menu_li"><a href = "about_us.html" class = "nolink">Organização</a></li>
+								<li id = "footer_menu_li"><a href = "competitions.html" class = "nolink">Competições</a></li>
+								<li id = "footer_menu_li"><a href = "join_us.html" class = "nolink">Junta-te a nós</a></li>
+								<li id = "footer_menu_li"><a href = "parcerias.html" class = "nolink">Parcerias</a></li>
+								<li id = "footer_menu_li"><a href = "faq.html" class = "nolink">FAQ´s</a></li>
+							</ul>
+		                </div>
+						<div class="collapse navbar-collapse navbar-left">
+							<div id = "row">
+								<div class="col-sm-1" style="padding-top: 15px">
+								<a href="https://www.facebook.com/"><img height="25" id=social-icon" src="images/facebook.png"></a>
+								<a href="https://plus.google.com/"><img height="25" id=social-icon" src="images/googleplus.png"></a>
+								<a href="https://www.twitter.com/"><img height="25" id=social-icon" src="images/twitter.png"></a>
+								</div>
+								<div class="col-sm-2 col-sm-offset-2">
+									<img src = "images/feup.png" class = "img_bottom">
+								</div>
+								<div class="col-sm-2 col-sm-offset-5">
+									<img src = "images/colgaia.png" class = "img_bottom">
+								</div>
+							</div>
+
+		                </div>
+		            </div><!--/.container-->
+		        </nav><!--/nav-->
+		    </footer><!--/footer-->
 	
 	<script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
