--- a/parcerias.html
+++ b/parcerias.html
@@ -17,31 +17,31 @@
 	</head>
 	<body>
 		
-		<header id="header">
-	        <nav id="main-menu" class="navbar navbar-default navbar-fixed-top" role="banner">
-	            <div class="container">
-	                <div class="navbar-header">
-	                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-	                        <span class="sr-only">Toggle navigation</span>
-	                        <span class="icon-bar"></span>
-	                        <span class="icon-bar"></span>
-	                        <span class="icon-bar"></span>
-	                    </button>
-	                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo" style= "max-width: 200px" ></a>
-	                </div>
-
-	                <div class="collapse navbar-collapse navbar-right">
-	                    <ul class="nav navbar-nav">
-							<li class="scroll"><img src = "images/dots_vertical.png" id = "thumb_menu" onmouseover="this.src='images/dots.png'" 							  onmouseout="this.src='images/dots_vertical.png'"></li>
-	                        <li class="scroll"><a href="competitions.html" id = "green_border">Competições</a></li>
-	                        <li class="scroll"><a href="join_us.html" id  = "red_border">Junta-te a nós</a></li>
-							<li class="scroll"><a href="contacts.html" id = "orange_border">Contatos</a></li>
-							<li class="scroll"><a id = "search_header"><span class = "glyphicon glyphicon-search"></span></a></li>
-	                    </ul>
-	                </div>
-	            </div><!--/.container-->
-	        </nav><!--/nav-->
-	    </header><!--/header-->
+	 <header id="header">
+        <nav id="main-menu" class="navbar navbar-default navbar-fixed-top" role="banner">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo" style= "max-width: 200px" ></a>
+                </div>
+				
+                <div class="collapse navbar-collapse navbar-right">
+                    <ul class="nav navbar-nav">
+						<li class="scroll"><img src = "images/dots_vertical.png" id = "thumb_menu" onmouseover="this.src='images/dots.png'" 							  onmouseout="this.src='images/dots_vertical.png'"></li>
+                        <li class="scroll"><a href="competitions.html" id = "green_border">Competições</a></li>
+                        <li class="scroll"><a href="join_us.html" id  = "red_border">Junta-te a nós</a></li>
+						<li class="scroll"><a href="contacts.html" id = "orange_border">Contatos</a></li>
+						<li class="scroll"><a id = "search_header"><span class = "glyphicon glyphicon-search"></span></a></li>
+                    </ul>
+                </div>
+            </div><!--/.container-->
+        </nav><!--/nav-->
+    </header><!--/header-->
 		
 	<section id="services" >
         <div class="container">
@@ -50,18 +50,18 @@
 		<h2 class="section-title text-center wow fadeInDown">Parcerias</h2>
 		<p class="text-center wow fadeInDown">Dê um impulso à sua empresa com uma parceria connosco </p>
 	</div>
-	
+	<form id="main-partner-form" name="partner-form" method="post" action="#">
 	  <div class="form-group wow fadeInUp" data-wow-duration="300ms" data-wow-delay="200ms">
     <label for="exampleInputEmail1">Organização</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" style="max-width: 400px;min-width=200px">
+    <input type="text" name="organization" class="form-control" id="exampleInputEmail1" style="max-width: 400px;min-width=200px" required>
 	 <label for="exampleInputEmail1" style="max-width: 400px;min-width=200px">Mensagem</label><br>
-    <textarea type="text"
+    <textarea type="text" name="text"
        cols="40" 
        rows="5" 
        style="max-width: 500px;min-width=200px" 
        name="Text1" 
        id="Text1" 
-       value="" ></textarea><br>
+       value="" required></textarea><br>
 		
   </div>
  
@@ -72,7 +72,7 @@
 </div>
 	
 			<footer id="header">
-		        <nav id="main-menu" class="navbar navbar-default navbar-fixed" role="banner">
+		        <nav id="main-menu" class="navbar navbar-default navbar-fixed-bottom" role="banner">
 		            <div class="container">
 		                <div class="collapse navbar-collapse navbar-right">
 		                    <ul class="nav navbar-nav">
@@ -90,10 +90,15 @@
 		                </div>
 						<div class="collapse navbar-collapse navbar-left">
 							<div id = "row">
-								<div class="col-sm-2">
+								<div class="col-sm-1" style="padding-top: 15px">
+								<a href="https://www.facebook.com/"><img height="25" id=social-icon" src="images/facebook.png"></a>
+								<a href="https://plus.google.com/"><img height="25" id=social-icon" src="images/googleplus.png"></a>
+								<a href="https://www.twitter.com/"><img height="25" id=social-icon" src="images/twitter.png"></a>
+								</div>
+								<div class="col-sm-2 col-sm-offset-2">
 									<img src = "images/feup.png" class = "img_bottom">
 								</div>
-								<div class="col-sm-2 col-sm-offset-8">
+								<div class="col-sm-2 col-sm-offset-5">
 									<img src = "images/colgaia.png" class = "img_bottom">
 								</div>
 							</div>
