Segunda-Feira tarde

--- a/join_us.html
+++ b/join_us.html
@@ -24,9 +24,19 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+	<link href="css/style2.css" rel="stylesheet">
 </head><!--/head-->
 
 <body id="home" class="homepage">
+
+	<!-- loading -->
+	<div id="preloader">
+		<div id="load">
+			<img src="images/uproject_logo_128.png" height="49px" width="50px" style="margin-top: -13px; margin-left: -28px;">
+		</div>
+	</div>
+	<!-- loading -->
+
    <header id="header">
         <nav id="main-menu" class="navbar navbar-default navbar-fixed-top" role="banner">
             <div class="container">
@@ -135,5 +145,6 @@
     <script src="js/jquery.inview.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
+	<script src="js/custom.js"></script>
 </body>
 </html>
