--- a/parcerias.html
+++ b/parcerias.html
@@ -14,9 +14,18 @@
     <link href="css/prettyPhoto.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
+	<link href="css/style2.css" rel="stylesheet">
 	</head>
 	<body>
 		
+		<!-- loading -->
+	<div id="preloader">
+		<div id="load">
+			<img src="images/uproject_logo_128.png" height="49px" width="50px" style="margin-top: -13px; margin-left: -28px;">
+		</div>
+	</div>
+	<!-- loading -->
+	
 	 <header id="header">
         <nav id="main-menu" class="navbar navbar-default navbar-fixed-top" role="banner">
             <div class="container">
@@ -118,6 +127,7 @@
     <script src="js/jquery.inview.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
+	<script src="js/custom.js"></script>
 	
 	</body>
 	</head>
