--- a/competitions.html
+++ b/competitions.html
@@ -15,6 +15,7 @@
     <link href="css/prettyPhoto.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
@@ -24,6 +25,15 @@
 </head><!--/head-->
 
 <body id="home" class="homepage">
+
+	<!-- loading -->
+	<div id="preloader">
+		<div id="load">
+			<img src="images/uproject_logo_128.png" height="49px" width="50px" style="margin-top: -13px; margin-left: -28px;">
+		</div>
+	</div>
+	<!-- loading -->
+
 
     <header id="header">
         <nav id="main-menu" class="navbar navbar-default navbar-fixed-top" role="banner">
@@ -136,7 +146,7 @@
                     <div class="media-body">
 						<div style="display:inline-block">
 							<div class="media service-box wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;margin-bottom: 0px;">								
-								<iframe src="http://www.youtube.com/embed/4p5mjLsbNIs" frameborder="0" style="width: 100%;height: 300px; display:inline-table"></iframe>
+								<iframe src="http://www.youtube.com/embed/4p5mjLsbNIs" frameborder="0" style="width: 150%;height: 300px; display:inline-table"></iframe>
 							</div>
 						</div>
 					</div>
@@ -160,6 +170,26 @@
 						<li><p><span style="color:red">No futuro</span>, a <span style="color:#45aed6">U.Project</span> irá organizar várias corridas de drones</p></li>
 			</ul>
 
+			</div>
+			<div class="media service-box wow fadeInLeft">
+				<div class="media-body">
+				<div>
+					<div style="display:inline-block">
+						<img src="images/bruno.jpg"  style="border-radius:100%"/>
+					</div>
+					<p style="display:inline-block"></p>
+					<p style="display:inline-block"></p>
+					<p style="display:inline-block">Eu adorei!!</p>
+				</div>
+					<div style="padding-top: 15px;">
+				<div style="display:inline-block">
+						<img src="images/marcio.jpg"  style="border-radius:100%"/>
+					</div>
+					<p style="display:inline-block"></p>
+					<p style="display:inline-block"></p>
+					<p style="display:inline-block">Eu achei bastante interessante.</p>
+				</div>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -213,5 +243,6 @@
     <script src="js/jquery.inview.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
+	<script src="js/custom.js"></script>
 </body>
 </html>
